clusters/cluster1/core/cilium/gateway-api/gateway-referencegrants.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-default-to-frigate-outpost
  namespace: authentik
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: ""
    kind: Service
    name: ak-outpost-frigate-outpost
