clusters/cluster1/core/cilium/gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-l2
spec:
  controllerName: io.cilium/gateway-controller
  description: Cilium L2 Gateway
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: cilium-l2-config
    namespace: gateway-system
